# hbrscrpr

./: .gitlab-ci.yml  Makefile  README.md  pyproject.toml  setup.cfg
hbrscrpr/: app.py
tests/: conftest.py  test_app.py
